# SAP_MCP

./: .gitignore  CHANGELOG.md  Dockerfile  README.MD  config.example.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
Doc/: README_EN.MD  README_JA.MD  README_ZH.MD  USAGE.md
Doc/USAGE/: USAGE_EN.md  USAGE_JA.md  USAGE_ZH.md
Docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
README/: README_EN.md  README_JA.md  README_ZH.MD
Request/SAP Request/: K911881.S4D  K912034.S4D  R911881.S4D  R912034.S4D  Y_UPLOAD_TRANSPORT_REQUEST.md
gui/: __init__.py  config_manager.py  gui.py  main_window.py  project_info.py  service_status.py  utils.py
mcpDemo/: demoServer.py
server/: __init__.py  check_database.py  check_table_structure.py  config.py  db_handler.py  http_client.py  sap_mcp_client.py  sap_mcp_server.py
utils/: cache.py  common.py  config.example.py  logging_config.py
web/: main.py
web/static/css/: custom.css  style.css
web/static/js/: app.js
web/templates/: index.html
